--- a/product.html
+++ b/product.html
@@ -7,169 +7,191 @@
   <link rel="stylesheet" href="/public/styles.css"/>
 </head>
 <body>
-  <div class="container">
-
-    <div class="row wrap" style="margin:10px 0">
-      <a href="/" class="btn outline">← Back to Dashboard</a>
-      <div class="badge" id="pBreadcrumb">Product</div>
+  <div id="app">
+    <!-- ================= LOGIN ================= -->
+    <div id="login" class="auth">
+      <h1 class="brand">EAS Tracker</h1>
+      <p>Enter password to access</p>
+      <div class="row">
+        <input id="pw" type="password" class="input" placeholder="Password"/>
+        <button id="loginBtn" class="btn">Login</button>
+      </div>
     </div>
 
-    <!-- HEADER -->
-    <section class="section">
-      <h2 id="pTitle">Product</h2>
-      <div class="card">
-        <div class="row wrap">
-          <div><b>Name:</b> <span id="pName">—</span></div>
-          <div><b>SKU:</b> <span id="pSku">—</span></div>
-          <div><b>Status:</b> <span id="pStatus">—</span></div>
-          <div><b>Cost (China):</b> $<span id="pCost">0</span></div>
-          <div><b>Ship China→Kenya:</b> $<span id="pShip">0</span></div>
-          <div><b>Profit + Ads Budget:</b> $<span id="pMB">0</span></div>
-        </div>
-        <div class="row wrap">
-          <button id="pActivate" class="btn outline">Set Active</button>
-          <button id="pArchive" class="btn danger outline">Archive</button>
-          <button id="pDelete" class="btn danger">Delete Product</button>
-        </div>
-      </div>
-    </section>
+    <!-- ================= MAIN (Product Page) ================= -->
+    <div id="main" style="display:none">
+      <nav class="nav">
+        <a href="/" class="nav-left">← Back</a>
+        <span class="nav-title">Product Details</span>
+        <a id="logoutLink" class="nav-right">Logout</a>
+      </nav>
 
-    <!-- STOCK & AD SPEND BY COUNTRY (this product only; China excluded) -->
-    <section class="section">
-      <h2>Stock &amp; Ad Spend by Country</h2>
-      <div class="card">
-        <div class="row wrap">
-          <select id="pAdCountry" class="input"></select>
-          <select id="pAdPlatform" class="input">
-            <option value="facebook">Facebook</option>
-            <option value="tiktok">TikTok</option>
-            <option value="google">Google</option>
-          </select>
-          <input id="pAdAmount" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01"/>
-          <button id="pAdSave" class="btn">Save/Replace</button>
-        </div>
-        <small>Ad spend here only affects this product. Saving again for the same platform &amp; country replaces today’s value.</small>
-      </div>
+      <div class="container">
 
-      <table class="table" id="pStockTable">
-        <thead>
-          <tr>
-            <th>Country</th>
-            <th>Approx. Stock</th>
-            <th>Total Ad Spend (USD)</th>
-          </tr>
-        </thead>
-        <tbody id="pStockBody"><!-- rows injected --></tbody>
-        <tfoot>
-          <tr class="totals">
-            <th>Totals</th>
-            <th id="pStockTotal">0</th>
-            <th id="pAdTotal">0.00</th>
-          </tr>
-        </tfoot>
-      </table>
-    </section>
+        <!-- HEADER -->
+        <section class="section">
+          <h2 id="pdTitle">Product</h2>
+          <div id="pdSku" class="muted"></div>
+          <div id="pdTransitBadge" class="badge" style="margin-top:8px">Transit total: 0</div>
+        </section>
 
-    <!-- STOCK MOVEMENT (create shipment for this product; China allowed here) -->
-    <section class="section">
-      <h2>Create Shipment (This Product)</h2>
-      <div class="card">
-        <div class="row wrap">
-          <select id="ppFrom" class="input"></select>
-          <span>→</span>
-          <select id="ppTo" class="input"></select>
-          <input id="ppQty" type="number" class="input" placeholder="Qty" min="0"/>
-          <input id="ppShipCost" type="number" class="input" placeholder="Ship Cost (USD)" min="0" step="0.01"/>
-          <input id="ppDepart" type="date" class="input"/>
-          <button id="ppAdd" class="btn">Add Shipment</button>
-        </div>
-        <small>When marked as arrived, stock is deducted from origin and added to destination.</small>
-      </div>
-    </section>
+        <!-- 1) STOCK & AD SPEND BY COUNTRY (THIS PRODUCT ONLY) -->
+        <section class="section">
+          <h3>Stock &amp; Ad Spend by Country</h3>
+          <table class="table">
+            <thead>
+              <tr><th>Country</th><th>Approx. Stock</th><th>Total Ad Spend (USD)</th></tr>
+            </thead>
+            <tbody id="pdStockBody"><!-- rows injected --></tbody>
+            <tfoot>
+              <tr class="totals"><th>Totals</th><th id="pdStockTotal">0</th><th id="pdAdTotal">0</th></tr>
+            </tfoot>
+          </table>
+        </section>
 
-    <!-- TRANSIT (FILTERED TO THIS PRODUCT). On arrive, stays on this page. -->
-    <section class="section">
-      <h2>Transit — China → Kenya (This Product)</h2>
-      <table class="table">
-        <thead><tr>
-          <th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
-        </tr></thead>
-        <tbody id="pShipCKBody"><!-- rows injected --></tbody>
-      </table>
-    </section>
+        <!-- 2) PROFIT + ADVERTISING BUDGET (MANUAL, EDITABLE) -->
+        <section class="section">
+          <h3>Profit + Advertising Budget (per country)</h3>
+          <div class="card">
+            <div class="row wrap">
+              <select id="pdPBCountry" class="input"></select>
+              <input id="pdPBValue" type="number" class="input" placeholder="Budget (USD)" step="0.01"/>
+              <button id="pdPBSave" class="btn">Save</button>
+            </div>
+            <small>Manual reference only (not auto-calculated).</small>
+          </div>
+          <table class="table">
+            <thead><tr><th>Country</th><th>Budget</th><th></th></tr></thead>
+            <tbody id="pdPBBBody"><!-- rows injected --></tbody>
+          </table>
+        </section>
 
-    <section class="section">
-      <h2>Transit — Inter-country (This Product)</h2>
-      <table class="table">
-        <thead><tr>
-          <th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
-        </tr></thead>
-        <tbody id="pShipICBody"><!-- rows injected --></tbody>
-      </table>
-    </section>
+        <!-- 3) DAILY ADVERTISING SPEND (REPLACE/UPSERT) -->
+        <section class="section">
+          <h3>Daily Ad Spend</h3>
+          <div class="card">
+            <div class="row wrap">
+              <select id="pdAdCountry" class="input"></select>
+              <select id="pdAdPlatform" class="input">
+                <option value="facebook">Facebook</option>
+                <option value="tiktok">TikTok</option>
+                <option value="google">Google</option>
+              </select>
+              <input id="pdAdAmount" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01"/>
+              <button id="pdAdSave" class="btn">Save/Replace</button>
+            </div>
+            <small>Saving again for the same <b>platform + country</b> replaces the previous value for this product.</small>
+          </div>
+          <table class="table">
+            <thead><tr><th>Country</th><th>Platform</th><th>Amount (USD)</th></tr></thead>
+            <tbody id="pdAdBody"><!-- rows injected --></tbody>
+          </table>
+        </section>
 
-    <!-- LIFETIME (THIS PRODUCT) -->
-    <section class="section">
-      <h2>Lifetime — This Product</h2>
-      <div class="row wrap">
-        <input id="plStart" type="date" class="input"/>
-        <input id="plEnd" type="date" class="input"/>
-        <button id="plRun" class="btn">Run</button>
-      </div>
-      <table class="table" id="pLifeTable">
-        <thead><tr>
-          <th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Shipping</th><th>Base Cost</th><th>Pieces</th><th>Profit</th>
-        </tr></thead>
-        <tbody id="pLifeBody"><!-- rows injected --></tbody>
-        <tfoot>
-          <tr class="totals">
-            <th>Totals</th>
-            <th id="plRevT">0</th><th id="plAdT">0</th><th id="plShipT">0</th><th id="plBaseT">0</th><th id="plPiecesT">0</th><th id="plProfitT">0</th>
-          </tr>
-        </tfoot>
-      </table>
-    </section>
+        <!-- 4) STOCK MOVEMENT (CREATE SHIPMENT FOR THIS PRODUCT) -->
+        <section class="section">
+          <h3>Stock Movement</h3>
+          <div class="card">
+            <div class="row wrap">
+              <select id="pdMvFrom" class="input"></select>
+              <span>→</span>
+              <select id="pdMvTo" class="input"></select>
+              <input id="pdMvQty" type="number" class="input" placeholder="Qty" min="0"/>
+              <input id="pdMvShip" type="number" class="input" placeholder="Shipping Cost (USD)" min="0" step="0.01"/>
+              <button id="pdMvAdd" class="btn">Add Movement</button>
+            </div>
+            <small>On arrival, stock will be added to destination and deducted from origin.</small>
+          </div>
+        </section>
 
-    <!-- INFLUENCERS (ADD / DELETE + SPEND) -->
-    <section class="section">
-      <h2>Influencers</h2>
+        <!-- 5) TRANSIT SHIPMENTS (CHINA→KENYA) -->
+        <section class="section">
+          <h3>Transit — China → Kenya</h3>
+          <table class="table">
+            <thead><tr>
+              <th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
+            </tr></thead>
+            <tbody id="pdShipCKBody"><!-- rows injected --></tbody>
+          </table>
+        </section>
 
-      <div class="card">
-        <div class="h">Add Influencer</div>
-        <div class="row wrap">
-          <input id="pInfName" class="input" placeholder="Name"/>
-          <input id="pInfSocial" class="input" placeholder="Social handle"/>
-          <select id="pInfCountry" class="input"><!-- countries (no China) --></select>
-          <button id="pInfAdd" class="btn">Add</button>
-        </div>
-      </div>
+        <!-- 6) TRANSIT SHIPMENTS (INTER-COUNTRY) -->
+        <section class="section">
+          <h3>Transit — Inter-country</h3>
+          <table class="table">
+            <thead><tr>
+              <th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
+            </tr></thead>
+            <tbody id="pdShipICBody"><!-- rows injected --></tbody>
+          </table>
+        </section>
 
-      <table class="table" id="pInfTable">
-        <thead><tr><th>Name</th><th>Social</th><th>Country</th><th>Actions</th></tr></thead>
-        <tbody><!-- rows injected, include delete buttons --></tbody>
-      </table>
+        <!-- 7) LIFETIME (THIS PRODUCT) -->
+        <section class="section">
+          <h3>Lifetime (This Product)</h3>
+          <div class="card">
+            <div class="row wrap">
+              <input id="pdLPStart" type="date" class="input"/>
+              <input id="pdLPEnd" type="date" class="input"/>
+              <button id="pdLPRun" class="btn">Run</button>
+            </div>
+          </div>
+          <table class="table">
+            <thead><tr>
+              <th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Shipping</th><th>Base Cost</th><th>Pieces</th><th>Profit</th>
+            </tr></thead>
+            <tbody id="pdLPBody"><!-- rows injected --></tbody>
+            <tfoot>
+              <tr class="totals">
+                <th>Totals</th>
+                <th id="pdLPRevT">0</th><th id="pdLPAdT">0</th><th id="pdLPShipT">0</th>
+                <th id="pdLPBaseT">0</th><th id="pdLPPcsT">0</th><th id="pdLPProfitT">0</th>
+              </tr>
+            </tfoot>
+          </table>
+        </section>
 
-      <div class="card">
-        <div class="h">Add Influencer Spend (This Product)</div>
-        <div class="row wrap">
-          <input id="pInfDate" type="date" class="input"/>
-          <select id="pInfPick" class="input"><!-- influencers list --></select>
-          <select id="pInfSpendCountry" class="input"><!-- countries (no China) --></select>
-          <input id="pInfAmount" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01"/>
-          <button id="pInfSpendAdd" class="btn">Add Spend</button>
-        </div>
-      </div>
+        <!-- 8) INFLUENCERS -->
+        <section class="section">
+          <h3>Influencer Spend</h3>
+          <div class="card">
+            <div class="row wrap">
+              <input id="pdInfName" class="input" placeholder="Influencer Name"/>
+              <input id="pdInfSocial" class="input" placeholder="Social @handle"/>
+              <select id="pdInfCountry" class="input"></select>
+              <button id="pdInfAdd" class="btn">Add Influencer</button>
+            </div>
 
-      <table class="table" id="pInfSpendTable">
-        <thead><tr>
-          <th>Date</th><th>Influencer</th><th>Country</th><th>Amount</th><th></th>
-        </tr></thead>
-        <tbody><!-- rows injected; include delete spend buttons --></tbody>
-      </table>
-    </section>
+            <div class="row wrap" style="margin-top:8px">
+              <input id="pdInfDate" type="date" class="input"/>
+              <select id="pdInfSelect" class="input"></select>
+              <select id="pdInfCountry" class="input" style="display:none"></select>
+              <input id="pdInfAmount" type="number" class="input" placeholder="Spend (USD)" min="0" step="0.01"/>
+              <button id="pdInfSpendAdd" class="btn">Add Spend</button>
+            </div>
 
-  </div>
+            <div class="row wrap" style="margin-top:8px">
+              <input id="pdInfStart" type="date" class="input"/>
+              <input id="pdInfEnd" type="date" class="input"/>
+              <select id="pdInfFilterCountry" class="input"><option value="">All countries</option></select>
+              <button id="pdInfRun" class="btn outline">Filter</button>
+            </div>
+          </div>
 
+          <table class="table">
+            <thead><tr><th>Date</th><th>Country</th><th>Influencer</th><th>Social</th><th>Amount</th><th></th></tr></thead>
+            <tbody id="pdInfBody"><!-- rows injected --></tbody>
+            <tfoot>
+              <tr class="totals"><th colspan="4">Total</th><th id="pdInfTotal">0</th><th></th></tr>
+            </tfoot>
+          </table>
+        </section>
+
+      </div><!-- /container -->
+    </div><!-- /main -->
+  </div><!-- /app -->
+
+  <!-- shared app script -->
   <script src="/public/app.js"></script>
   <script src="/public/snapshot.js"></script>
 </body>
